@@ -26,7 +26,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * A representation of a schedule.
@@ -106,11 +105,11 @@ public class Schedule
         {
             long repairedAfter
                     = System.currentTimeMillis() - repairJobView.getRepairConfiguration().getRepairIntervalInMs();
-            VnodeRepairStates vnodeRepairStates = repairJobView.getRepairStateSnapshot().getVnodeRepairStates();
+            VnodeRepairStates vnodeRepairStates = repairJobView.getRepairStateSnapshot().vnodeRepairStates();
 
             this.virtualNodeStates = vnodeRepairStates.getVnodeRepairStates().stream()
                     .map(vrs -> VirtualNodeState.convert(vrs, repairedAfter))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
