@@ -108,7 +108,7 @@ public class TestScheduleRepairManagementRESTImpl
                 ImmutableSet.of(expectedVnodeRepairState3), RepairOptions.RepairType.VNODE);
         List<ScheduledRepairJobView> repairJobViews = Arrays.asList(job1, job2, job3);
 
-        List<Schedule> expectedResponse = repairJobViews.stream().map(Schedule::new).collect(Collectors.toList());
+        List<Schedule> expectedResponse = repairJobViews.stream().map(Schedule::new).toList();
 
         when(myRepairScheduler.getCurrentRepairJobs()).thenReturn(repairJobViews);
 
@@ -165,7 +165,7 @@ public class TestScheduleRepairManagementRESTImpl
         List<ScheduledRepairJobView> repairJobViews = Arrays.asList(job1, job2, job3);
 
         List<Schedule> expectedResponse = repairJobViews.stream().map(view -> new Schedule(view, false))
-                .collect(Collectors.toList());
+                .toList();
 
         when(myRepairScheduler.getCurrentRepairJobs()).thenReturn(repairJobViews);
         ResponseEntity<Schedule> response = null;
@@ -187,7 +187,7 @@ public class TestScheduleRepairManagementRESTImpl
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
 
         List<Schedule> expectedResponseFull = repairJobViews.stream().map(view -> new Schedule(view, true))
-                .collect(Collectors.toList());
+                .toList();
 
         response = null;
         try
@@ -216,7 +216,7 @@ public class TestScheduleRepairManagementRESTImpl
         VnodeRepairStates vnodeRepairStatesMock = mock(VnodeRepairStates.class);
         when(vnodeRepairStatesMock.getVnodeRepairStates()).thenReturn(vnodeRepairState);
         RepairStateSnapshot repairStateSnapshotMock = mock(RepairStateSnapshot.class);
-        when(repairStateSnapshotMock.getVnodeRepairStates()).thenReturn(vnodeRepairStatesMock);
+        when(repairStateSnapshotMock.vnodeRepairStates()).thenReturn(vnodeRepairStatesMock);
         return new ScheduledRepairJobView(id, tableReference, repairConfigurationMock, repairStateSnapshotMock,
                 ScheduledRepairJobView.Status.ON_TIME, 0.0, lastRepairedAt + repairInterval,
                 repairType);
